# name_stats

./: .gitignore  Dockerfile  README  api.py  app.py  default_settings.py  docker-compose.yaml  load_stats.py  names.db.2024-backup  names.db.dev  pyproject.toml
.github/workflows/: build.yaml
static/: name.html
templates/: load_stats.html  name.html
