[tool.poetry]
name = "name-counter"
version = "0.1.0"
description = ""
authors = ["Stefan Micheelsen <kontakt@stefanmicheelsen.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.31.0"
flask = "^2.3.2"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
