[tool.poetry]
name = "name-counter"
version = "0.1.0"
description = ""
authors = ["Stefan Micheelsen <kontakt@stefanmicheelsen.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.31.0"
flask = "^2.3.2"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"
types-beautifulsoup4 = "^4.12.0.20240106"
types-flask-cors = "^4.0.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
